changed href name pull

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Navigation -->
   <nav class="navbar">
     <ul>
-      <li><a href="CARDGAME/cardgame.html">CARDGAME</a></li>
+      <li><a href="cardgame/cardgame.html">CARDGAME</a></li>
     </ul>
   </nav>
 
