CORREÇÃO DE ACENTOS

--- a/cardgame/cardgame.html
+++ b/cardgame/cardgame.html
@@ -14,19 +14,19 @@
   <!-- LAYOUT 3 COLUNAS -->
   <div class="layout">
 
-    <!-- COLUNA ESQUERDA: INSTRUÇÕES -->
+    <!-- COLUNA ESQUERDA: INSTRUÃ‡Ã•ES -->
     <aside class="instructions-panel">
       <div class="instructions-header">
         <h2>Creative Cards  Regras & Cartas</h2>
-        <p>Como jogar, projetos, recursos e ações.</p>
+        <p>Como jogar, projetos, recursos e aÃ§Ãµes.</p>
       </div>
       <div class="instructions-body">
-        <h3>Visão Geral</h3>
+        <h3>VisÃ£o Geral</h3>
         <p>
-          <strong>Creative Cards</strong> é um jogo de cartas sobre produção audiovisual
+          <strong>Creative Cards</strong> Ã‰ um jogo de cartas sobre produÃ§Ã£o audiovisual
           e media. Os jogadores angariam recursos para concluir projetos
-          (cartazes, posts, reels, podcast, documentário, festival&).<br>
-          O primeiro a chegar a <strong>20 pontos</strong> em projetos concluídos ganha.
+          (cartazes, posts, reels, podcast, documentÃ¡rio, festival&).<br>
+          O primeiro a chegar a <strong>20 pontos</strong> em projetos concluÃ­dos ganha.
         </p>
 
         <h3>Objetivo</h3>
@@ -36,26 +36,26 @@
         </p>
         <ul>
           <li><strong>Pequenos</strong>: 23 recursos " 24 pontos</li>
-          <li><strong>Médios</strong>: 45 recursos " 57 pontos</li>
+          <li><strong>MÃ©dios</strong>: 45 recursos " 57 pontos</li>
           <li><strong>Grandes</strong>: 610 recursos " 810 pontos</li>
         </ul>
 
         <h3>Setup</h3>
         <ol>
-          <li>Baralha o <strong>Baralho Principal</strong> (Recursos + Ações).</li>
+          <li>Baralha o <strong>Baralho Principal</strong> (Recursos + AÃ§Ãµes).</li>
           <li>Baralha o <strong>Baralho de Projetos</strong> em separado.</li>
           <li>Cada jogador recebe <strong>5 cartas</strong> do baralho principal.</li>
           <li>Cada jogador recebe <strong>3 projetos</strong>, escolhe 1 e devolve 2 para o fundo.</li>
-          <li>Define quem começa. Joga-se por turnos.</li>
+          <li>Define quem comeï¿½a. Joga-se por turnos.</li>
         </ol>
 
         <h3>Turno</h3>
         <ol>
-          <li>Podes jogar <strong>quantas cartas quiseres</strong> da mão.</li>
-          <li>Só podes <strong>comprar 1 carta por turno</strong>.</li>
-          <li>Podes <strong>alocar recursos</strong> ao teu projeto (saem da mão e ficam no projeto).</li>
+          <li>Podes jogar <strong>quantas cartas quiseres</strong> da mÃ£o.</li>
+          <li>SÃ³ podes <strong>comprar 1 carta por turno</strong>.</li>
+          <li>Podes <strong>alocar recursos</strong> ao teu projeto (saem da mï¿½o e ficam no projeto).</li>
           <li>Se tiveres todos os recursos (ou estiveres a usar Gambiarra), podes <strong>concluir o projeto</strong>.</li>
-          <li>Depois de concluir, escolhes novo projeto (3 opções aleatórias).</li>
+          <li>Depois de concluir, escolhes novo projeto (3 opÃ§Ãµes aleatÃ³rias).</li>
         </ol>
 
         <h3>Trocar 3 cartas iguais</h3>
@@ -63,7 +63,7 @@
           Uma vez por turno:
         </p>
         <ul>
-          <li>Descarta <strong>3 cartas de recurso iguais</strong> da tua mão;</li>
+          <li>Descarta <strong>3 cartas de recurso iguais</strong> da tua mÃ£o;</li>
           <li>Escolhe <strong>1 recurso qualquer</strong> para receber em troca.</li>
         </ul>
 
@@ -72,54 +72,54 @@
           Ao tirar a carta <strong>Cliente cancelou o projeto</strong>:
         </p>
         <ul>
-          <li>O teu <strong>projeto atual é cancelado</strong> imediatamente;</li>
+          <li>O teu <strong>projeto atual Ã© cancelado</strong> imediatamente;</li>
           <li>Perdes <strong>todos os recursos alocados</strong> nesse projeto;</li>
-          <li>Não ganhas pontos;</li>
-          <li>Escolhes um novo projeto para começar.</li>
+          <li>NÃ£o ganhas pontos;</li>
+          <li>Escolhes um novo projeto para comeÃ§ar.</li>
         </ul>
 
         <h3>Projetos Pequenos</h3>
         <ul>
-          <li><strong>Cartaz publicitário</strong>  Designer Gráfico, Software de Design, Material Gráfico</li>
-          <li><strong>Post Social Media</strong>  Designer Gráfico, Copywriter, Material Gráfico</li>
-          <li><strong>Reel Instagram</strong>  Câmera Profissional, Videógrafo, Software de Edição</li>
-          <li><strong>Criar um Logotipo</strong>  Designer Gráfico, Software de Design</li>
-          <li><strong>Convite Digital</strong>  Designer Gráfico, Material Gráfico</li>
-          <li><strong>Banner Web</strong>  Designer Gráfico, Software de Design, Copywriter</li>
-          <li><strong>Flyer promocional</strong>  Designer Gráfico, Material Gráfico, Copywriter</li>
-          <li><strong>Meme Viral</strong>  Copywriter, Material Gráfico</li>
-          <li><strong>Sessão Fotográfica (Pequeno)</strong>  Câmera, Fotógrafo, Iluminação</li>
+          <li><strong>Cartaz publicitÃ¡rio</strong>  Designer GrÃ¡fico, Software de Design, Material GrÃ¡fico</li>
+          <li><strong>Post Social Media</strong>  Designer GrÃ¡fico, Copywriter, Material GrÃ¡fico</li>
+          <li><strong>Reel Instagram</strong>  CÃ¢mera Profissional, VideÃ³grafo, Software de EdiÃ§Ã£o</li>
+          <li><strong>Criar um Logotipo</strong>  Designer GrÃ¡fico, Software de Design</li>
+          <li><strong>Convite Digital</strong>  Designer GrÃ¡fico, Material GrÃ¡fico</li>
+          <li><strong>Banner Web</strong>  Designer GrÃ¡fico, Software de Design, Copywriter</li>
+          <li><strong>Flyer promocional</strong>  Designer GrÃ¡fico, Material GrÃ¡fico, Copywriter</li>
+          <li><strong>Meme Viral</strong>  Copywriter, Material GrÃ¡fico</li>
+          <li><strong>SessÃ§Ã£o FotogrÃ¡fica (Pequeno)</strong>  CÃ¢mera, FotÃ³grafo, IluminaÃ§Ã£o</li>
         </ul>
 
-        <h3>Projetos Médios</h3>
+        <h3>Projetos MÃ©dios</h3>
         <ul>
-          <li><strong>Sessão Fotográfica (Média)</strong>  Câmera, Fotógrafo, Iluminação, Edição</li>
-          <li><strong>Making Of</strong>  Câmera, Videógrafo, Fotógrafo, Microfone</li>
-          <li><strong>Entrevista</strong>  Câmera, Microfone, Videógrafo, Software de Edição, Iluminação</li>
+          <li><strong>SessÃ£o FotogrÃ¡fica (MÃ©dia)</strong>  CÃ¢mera, FotÃ³grafo, IluminaÃ§Ã£o, Ediï¿½ï¿½o</li>
+          <li><strong>Making Of</strong>  CÃ¢mera, VideÃ³grafo, FotÃ³grafo, Microfone</li>
+          <li><strong>Entrevista</strong>  CÃ¢mera, Microfone, VideÃ³grafo, Software de Ediï¿½ï¿½o, IluminaÃ§Ã£o</li>
         </ul>
 
         <h3>Projetos Grandes</h3>
         <ul>
-          <li><strong>Podcast</strong>  Microfone, Câmera, Iluminação, Técnico de som, Fones</li>
-          <li><strong>Documentário</strong>  Câmera, Videógrafo, Microfone, Iluminação, Copywriter, Software de Edição, Designer Gráfico, Software de Design</li>
-          <li><strong>Campanha Publicitária</strong>  Câmera, Videógrafo, Iluminação, Copywriter, Produção, Designer de interiores, Técnico de som, Microfone, Software de Edição</li>
-          <li><strong>Festival</strong>  Câmera, Fotógrafo, Videógrafo, Iluminação, Drone, Copywriter, Microfone, Software de Edição</li>
+          <li><strong>Podcast</strong>  Microfone, CÃ¢mera, IluminaÃ§Ã£o, TÃ©cnico de som, Fones</li>
+          <li><strong>DocumentÃ¡rio</strong>  CÃ¢mera, VideÃ³grafo, Microfone, IluminaÃ§Ã£o, Copywriter, Software de EdiÃ§Ã£o, Designer GrÃ¡fico, Software de Design</li>
+          <li><strong>Campanha PublicitÃ¡ria</strong>  CÃ¢mera, VideÃ³grafo, IluminaÃ§Ã£o, Copywriter, ProduÃ§Ã£o, Designer de interiores, TÃ©cnico de som, Microfone, Software de EdiÃ§Ã£o</li>
+          <li><strong>Festival</strong>  CÃ¢mera, FotÃ³grafo, VideÃ³grafo, IluminaÃ§Ã£o, Drone, Copywriter, Microfone, Software de EdiÃ§Ã£o</li>
         </ul>
 
-        <h3>Cartas de Ação</h3>
+        <h3>Cartas de AÃ§Ã£o</h3>
         <ul>
           <li><strong>+1 Carta</strong>  compra 1 carta.</li>
           <li><strong>+2 Cartas</strong>  compra 2 cartas.</li>
           <li><strong>+3 Cartas</strong>  compra 3 cartas.</li>
-          <li><strong>Roubo Criativo</strong>  rouba 1 carta aleatória.</li>
-          <li><strong>Roubo Duplo</strong>  rouba 2 cartas aleatórias.</li>
-          <li><strong>Bloqueio</strong>  cancela uma ação contra ti.</li>
+          <li><strong>Roubo Criativo</strong>  rouba 1 carta aleatÃ³ria.</li>
+          <li><strong>Roubo Duplo</strong>  rouba 2 cartas aleatÃ³rias.</li>
+          <li><strong>Bloqueio</strong>  cancela uma aÃ§Ã£o contra ti.</li>
           <li><strong>Reciclagem</strong>  recupera 1 recurso da pilha de descarte.</li>
-          <li><strong>Brainstorm</strong>  vê 3 cartas do topo, escolhe 1.</li>
+          <li><strong>Brainstorm</strong>  vÃª 3 cartas do topo, escolhe 1.</li>
           <li><strong>Troca de Projetos</strong>  troca o teu projeto com o de outro jogador.</li>
           <li><strong>Gambiarra</strong>  podes faltar a 1 recurso para concluir.</li>
-          <li><strong>Pausa Técnica</strong>  alvo não pode jogar cartas no próximo turno.</li>
-          <li><strong>Retirar 1/2/3 Cartas</strong>  alvo descarta cartas aleatórias.</li>
+          <li><strong>Pausa TÃ©cnica</strong>  alvo nÃ£o pode jogar cartas no prÃ³ximo turno.</li>
+          <li><strong>Retirar 1/2/3 Cartas</strong>  alvo descarta cartas aleatÃ³rias.</li>
           <li><strong>Cliente cancelou o projeto</strong>  cancela o teu projeto atual.</li>
         </ul>
       </div>
@@ -130,10 +130,10 @@
       <div class="top-bar">
         <div>
           <h1>
-            <span class="logo-icon"><¬</span>
-            Jogo de Cartas  Produção Criativa
+            <span class="logo-icon"></span>
+            Jogo de Cartas  ProduÃ§Ã£o Criativa
           </h1>
-          <div class="badge">Protótipo HTML + JS</div>
+          <div class="badge">Protï¿½tipo HTML + JS</div>
         </div>
         <div class="pile-info">
           <div id="deckInfo">Baralho principal: 0 cartas</div>
@@ -144,11 +144,11 @@
       <!-- SETUP INICIAL -->
       <div id="setupPanel" class="setup-panel">
         <div class="section-title">
-          <span>Configuração de Jogadores</span>
+          <span>ConfiguraÃ§Ã£o de Jogadores</span>
         </div>
         <div class="setup-inline">
           <div class="setup-field">
-            <label for="numPlayers">Nº de jogadores</label>
+            <label for="numPlayers">NÂº de jogadores</label>
             <select id="numPlayers">
               <option value="2">2 jogadores</option>
               <option value="3">3 jogadores</option>
@@ -158,10 +158,10 @@
           <button id="generatePlayersBtn" class="secondary">Gerar campos</button>
         </div>
         <div id="playersSetup" class="players-setup"></div>
-        <button id="startGameBtn">=€ Iniciar jogo</button>
+        <button id="startGameBtn">=Iniciar jogo</button>
         <div class="small-text">
-          Cada jogador começa com <strong>5 cartas</strong> e escolhe
-          1 projeto de entre <strong>3 opções aleatórias</strong>.
+          Cada jogador comeÃ§a com <strong>5 cartas</strong> e escolhe
+          1 projeto de entre <strong>3 opÃ§Ãµes aleatÃ³rias</strong>.
           O primeiro a chegar a <strong>20 pontos</strong> vence.
         </div>
       </div>
@@ -172,15 +172,15 @@
           <div class="column main-column">
             <div class="section-title">
               <span>Jogador Atual</span>
-              <button id="nextTurnBtn" class="secondary">¡ Passar turno</button>
+              <button id="nextTurnBtn" class="secondary"> Passar turno</button>
             </div>
 
             <div id="currentPlayerInfo" class="card"></div>
 
             <div class="section-title section-title-hand">
-              <span>Mão de Cartas</span>
+              <span>MÃ£o de Cartas</span>
               <span class="small-text">
-                Cartas agrupadas por tipo. Clica em ações para jogar ou aloca recursos ao projeto.
+                Cartas agrupadas por tipo. Clica em aÃ§Ãµes para jogar ou aloca recursos ao projeto.
               </span>
             </div>
             <div id="handContainer" class="hand-grid"></div>
@@ -191,7 +191,7 @@
             <div id="projectContainer"></div>
 
             <div class="actions-row">
-              <button id="drawCardBtn">=å Comprar carta</button>
+              <button id="drawCardBtn">Comprar carta</button>
               <button id="tryCompleteBtn" class="secondary"> Tentar concluir projeto</button>
               <button id="tradeThreeBtn" class="secondary">{ Trocar 3 iguais</button>
             </div>
@@ -211,7 +211,7 @@
             <div id="allPlayersPanel" class="all-players-panel"></div>
 
             <div class="section-title section-title-log">
-              <span>Últimos eventos</span>
+              <span>Ãšltimos eventos</span>
             </div>
             <div id="log" class="log"></div>
           </div>
@@ -219,36 +219,39 @@
       </div>
     </div>
 
-    <!-- COLUNA DIREITA: RECURSOS & AÇÕES -->
+    <!-- COLUNA DIREITA: RECURSOS & Aï¿½ï¿½ES -->
     <aside class="right-sidebar">
       <div class="side-box">
         <h3>Recursos</h3>
         <ul>
-          <li><¥ Câmera / Câmera Profissional</li>
-          <li>=ø Fotógrafo</li>
-          <li><¬ Videógrafo</li>
-          <li><™ Microfone</li>
-          <li>=¡ Iluminação</li>
-          <li><› Técnico de som</li>
-          <li>>Ñ<¨ Designer Gráfico / Grafistas</li>
-          <li><¨ Designer / Motion</li>
-          <li>=Œ Software de Design</li>
-          <li>=¥ Software de Edição</li>
-          <li>=Ä Material Gráfico</li>
-          <li> Guião / Guionistas</li>
-          <li>=h<ý=» Editor</li>
-          <li><§ Fones</li>
-          <li>=½ Footage</li>
-          <li>=à Equipamento</li>
-          <li>=æ Produção</li>
-          <li>=ð Drone</li>
-          <li>=Ë Designer de interiores</li>
-          <li> Copywriter</li>
+          <li>CÃ¢mera / CÃ¢mera Profissional</li>
+          <li>FotÃ³grafo</li>
+          <li>VideÃ³grafo</li>
+          <li>Microfone</li>
+          <li>IluminaÃ§Ã£o</li>
+          <li>TÃ©cnico de som</li>
+      
+<li> Designer GrÃ¡fico / Grafistas</li>
+          <li>Designer / Motion</li>
+          <li>Software de Design</li>
+          <li>Software de EdiÃ§Ã£o</li>
+          <li>Material GrÃ¡fico</li>
+          <li>GuiÃ£o / Guionistas</li>
+          
+<li>Editor</li>
+          <li>Fones</li>
+          <li>Footage</li>
+          <li>Equipamento</li>
+          <li>ProduÃ§Ã£o</li>
+          <li>Drone</li>
+          <li>Designer de interiores</li>
+          <li>
+<li>Copywriter</li>
         </ul>
       </div>
 
       <div class="side-box">
-        <h3>Cartas de Ação</h3>
+        <h3>Cartas de AÃ§Ã£o</h3>
         <ul>
           <li>+1 Carta</li>
           <li>+2 Cartas</li>
@@ -260,7 +263,7 @@
           <li>Brainstorm</li>
           <li>Troca de Projetos</li>
           <li>Gambiarra</li>
-          <li>Pausa Técnica</li>
+          <li>Pausa TÃ©cnica</li>
           <li>Retirar 1/2/3 Cartas</li>
           <li>Cliente cancelou o projeto</li>
         </ul>
