--- a/cardgame/cardgame.html
+++ b/cardgame/cardgame.html
@@ -158,7 +158,7 @@
           <button id="generatePlayersBtn" class="secondary">Gerar campos</button>
         </div>
         <div id="playersSetup" class="players-setup"></div>
-        <button id="startGameBtn">=Iniciar jogo</button>
+        <button id="startGameBtn">Iniciar jogo</button>
         <div class="small-text">
           Cada jogador começa com <strong>5 cartas</strong> e escolhe
           1 projeto de entre <strong>3 opções aleatórias</strong>.
@@ -172,7 +172,7 @@
           <div class="column main-column">
             <div class="section-title">
               <span>Jogador Atual</span>
-              <button id="nextTurnBtn" class="secondary"> Passar turno</button>
+              <button id="nextTurnBtn" class="secondary">Passar turno</button>
             </div>
 
             <div id="currentPlayerInfo" class="card"></div>
