INDEX CHANGE NAME

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Custom Site</title>
+  <title>OPPEN LOBBY</title>
   <link rel="stylesheet" href="index.css">
 </head>
 
